#495: prevent content down shift on hover

--- a/app/src/app/core/components/header/header.component.scss
+++ b/app/src/app/core/components/header/header.component.scss
@@ -163,4 +163,9 @@
   #navbar ::ng-deep .form-group {
     width: 100%;
   }
+
+  #navbar:hover ::ng-deep .form-control,
+  .form-group:focus-within ::ng-deep .form-control {
+    height: auto !important;
+  }
 }
