--- a/app/src/app/pages/home/home.component.scss
+++ b/app/src/app/pages/home/home.component.scss
@@ -21,22 +21,21 @@ $color1: #00bc8c;
 /** Styling for the title & search div */
 .container-search {
   width: 80%;
-
-  @media (min-width: 377px) and (max-width: 576px) {
-    display: none;
-  }
-
   margin-left: auto;
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 2rem;
   position: relative;
 
+  @media (min-width: 377px) and (max-width: 576px) {
+    display: none;
+  }
+
   @media (min-width: 577px) and (max-width: 767px) {
-    margin-bottom: 4rem;
+    display: none;
   }
   @media (min-width: 0px) and (max-width: 576px) {
-    margin-bottom: 1em;
+    display: none;
   }
 
   .logo {
